Fixed issue with compared treatments overlapping with included treatments

--- a/src/mcode-pilot/components/TreatmentsPopover/TreatmentsPopover.scss
+++ b/src/mcode-pilot/components/TreatmentsPopover/TreatmentsPopover.scss
@@ -1,4 +1,5 @@
-$color-blue: #0084b8;;
+$color-blue: #0084b8;
+$color-gray: #ccc;
 
 .treatments-popper {
     position: absolute;
@@ -34,6 +35,11 @@ $color-blue: #0084b8;;
                 height: 22px;
                 color: $color-blue;
                 margin-right: -5px;
+            }
+
+            .checkbox[disabled] svg,
+            label[class*="disabled"] .checkbox-label {
+                color: $color-gray;
             }
         }
     }
